REFACTOR creation for matrix
